Criando grafico rosquinha =D

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <title>Edição de Tabela</title>
 </head>
+
 <body>
     <header>
         <form method="post">
@@ -17,7 +19,64 @@
         </form>
     </header>
     <main>
-
+        <article>
+            <h1>
+                DATA
+            </h1>
+            <p>
+                Zombie ipsum reversus ab viral inferno, nam rick grimes malum.
+            </p>
+        </article>
+        <section>
+            <table>
+                <tr>
+                    <th></th>
+                    <th class="firstname">First Name</th>
+                    <th class="lastname">Last Name</th>
+                    <th class="participation">Participation</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td class="firstname">Carlos</td>
+                    <td class="lastname">Moura</td>
+                    <td class="participation">5%</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td class="firstname">Fernanda</td>
+                    <td class="lastname">Oliveira</td>
+                    <td class="participation">15%</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td class="firstname">Hugo</td>
+                    <td class="lastname">Silva</td>
+                    <td class="participation">20%</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td class="firstname">Eliza</td>
+                    <td class="lastname">Souza</td>
+                    <td class="participation">20%</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td class="firstname">Anderson</td>
+                    <td class="lastname">Santos</td>
+                    <td class="participation">40%</td>
+                </tr>
+            </table>
+        </section>
+        <aside>
+            <div class="rosquinha">
+                <div class="fatia1">1</div>
+                <div class="fatia2">2</div>
+                <div class="fatia3">3</div>
+                <div class="fatia4">4</div>
+                <div class="fatia5">5</div>
+            </div>
+        </aside>
     </main>
 </body>
+
 </html>
