--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </form>
     </header>
     <main>
-        <article>
+        <article class="column">
             <h1>
                 DATA
             </h1>
@@ -27,7 +27,7 @@
                 Zombie ipsum reversus ab viral inferno, nam rick grimes malum.
             </p>
         </article>
-        <section>
+        <section class="column">
             <table>
                 <tr>
                     <th></th>
@@ -68,12 +68,13 @@
             </table>
         </section>
         <aside>
-            <div class="rosquinha">
-                <div class="fatia1">1</div>
-                <div class="fatia2">2</div>
-                <div class="fatia3">3</div>
-                <div class="fatia4">4</div>
-                <div class="fatia5">5</div>
+            <div id="rosquinha">
+                <div id="fatia1" class="recorte"><div class="queijo">1</div></div>
+                <div id="fatia2" class="recorte"><div class="queijo">2</div></div>
+                <div id="fatia3" class="recorte"><div class="queijo">3</div></div>
+                <div id="fatia4" class="recorte"><div class="queijo">4</div></div>
+                <div id="fatia5" class="recorte"><div class="queijo">5</div></div>
+                <div id="meio-branco"></div>
             </div>
         </aside>
     </main>
