--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </form>
     </header>
     <main>
-        <article class="column">
+        <article id="info-tabela" class="column">
             <h1>
                 DATA
             </h1>
@@ -69,12 +69,39 @@
         </section>
         <aside>
             <div id="rosquinha">
-                <div id="fatia1" class="recorte"><div class="queijo">1</div></div>
-                <div id="fatia2" class="recorte"><div class="queijo">2</div></div>
-                <div id="fatia3" class="recorte"><div class="queijo">3</div></div>
-                <div id="fatia4" class="recorte"><div class="queijo">4</div></div>
-                <div id="fatia5" class="recorte"><div class="queijo">5</div></div>
+                <div id="fatia1" class="recorte">
+                    <div class="queijo">1</div>
+                </div>
+                <div id="fatia2" class="recorte">
+                    <div class="queijo">2</div>
+                </div>
+                <div id="fatia3" class="recorte">
+                    <div class="queijo">3</div>
+                </div>
+                <div id="fatia4" class="recorte">
+                    <div class="queijo">4</div>
+                </div>
+                <div id="fatia5" class="recorte">
+                    <div class="queijo">5</div>
+                </div>
                 <div id="meio-branco"></div>
+            </div>
+            <div id="div-legenda">
+                <div id="azul" class="row">
+                    <div id="hugo" class="legenda"></div>Hugo Silva
+                </div>
+                <div id="verde" class="row">
+                    <div id="carlos" class="legenda"></div>Carlos Moura
+                </div>
+                <div id="cinza" class="row">
+                    <div id="eliza" class="legenda"></div>Eliza Souza
+                </div>
+                <div id="roxo" class="row">
+                    <div id="fernanda" class="legenda"></div>Fernanda Oliveira
+                </div>
+                <div id="vermelho" class="row">
+                    <div id="anderson" class="legenda"></div>Anderson Santos
+                </div>
             </div>
         </aside>
     </main>
