Nome no grafico

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </section>
         <aside>
             <div id="rosquinha">
+                <div id="fernanda-fatia">Fernanda</div>
                 <div id="fatia1" class="recorte">
                     <div class="queijo">1</div>
                 </div>
@@ -87,7 +88,7 @@
                 <div id="meio-branco"></div>
             </div>
             <div id="div-legenda">
-                <div id="azul" class="row">
+                <!-- <div id="azul" class="row">
                     <div id="hugo" class="legenda"></div>Hugo Silva
                 </div>
                 <div id="verde" class="row">
@@ -101,7 +102,7 @@
                 </div>
                 <div id="vermelho" class="row">
                     <div id="anderson" class="legenda"></div>Anderson Santos
-                </div>
+                </div> -->
             </div>
         </aside>
     </main>
